--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,13 @@
+#commandBoard {
+
+    display:          none;             /* Hidden by default */
+    position:         fixed;            /* Fixed/sticky position */
+    left:             50%;
+    transform:        translateX(-50%);
+    bottom:           20px;             /* Place the button at the bottom of the page */
+    z-index:          99;               /* Make sure it does not overlap */
+}
+
 .txt-lg {
     font-size: 1.2rem;
-} 
+}
